# praktika

./: .gitignore  .yamllint  14-10-25-675674.json  15-05-04-774881.json  CLAUDE.md  DEVELOPMENT.md  GETTING_STARTED.md  README.md  SECURITY.md  _local_ai_smoke.py  index.html  pyproject.toml  requirements.txt  setup.py  sync_findings_2026-07-08.md  trenya.md
.claude/commands/: bump-praktika.md  deploy.md
.github/workflows/: actions_dispatch.yml  actions_pr.yml  actions_pr_ci.yml  actions_push.yml  actions_push_ci.yml  aux_job_py.yaml  example_all_in.yaml  example_all_in.yml  example_artifact_and_dependencies.yaml  example_artifacts_and_dependencies.yml  example_ci_cache.yml  example_ci_db__html.yaml  example_ci_db_html.yaml  example_ci_db_report.yaml  example_ci_with_cache.yaml  example_cidb_html.yml  example_dispatch.yaml  example_dispatch.yml  example_gh_artifact.yaml  example_html_report.yaml  example_html_report_on_push.yaml  example_html_report_on_push.yml  example_job_dependencies.yaml  example_merge_ready_status.yaml  example_merge_ready_status__html.yaml  example_merge_ready_status_html.yaml  example_merge_ready_status_report.yaml  example_on_push__s3__sh.yaml  example_on_push_s3_self_hosted.yaml  example_on_push_trigger.yaml  example_parametrized.yml  example_parametrized_jobs.yaml  example_push_trigger__html.yaml  example_push_trigger_html.yaml  example_push_trigger_report.yaml  example_s3_artifact.yaml  example_s3_artifact.yml  example_self_hosted_runners.yaml  example_with_docker.yaml  example_with_docker.yml  (+17 more)
bootstrap/: pyproject.toml  setup.py
bootstrap/src/praktika_bootstrap/: __init__.py  common.py  main.py  run_job.py  run_workflow.py  venv_manager.py
bootstrap/src/praktika_controller/: __init__.py  common.py  controller.py  main.py  venv_manager.py
ci/: build_and_publish_wheels.sh  config.py  requirements.txt  workflows.py
ci/configs/: dependencies.py  example_gh_artifact.py  example_job_dependencies.py  example_self_hosted_runner.py  github_artifact.py  hello_world.py  library_ci.py  my_ci.py  self_hosted_runners.py
ci/infra/: GETTING_STARTED.md  cloud.py  praktika-gh-trigger_api_gateway.txt  user_data_orchestrator.sh
ci/infrastructure/: projects.py  user_data_orchestrator.sh  user_data_runner.sh
ci/jobs/: consume_artifact.py
ci/scripts/: build_and_publish_wheels.sh  publish_bootstrap_wheel.sh  publish_controller_wheel.sh  publish_coverage_pages.py  publish_wheel.sh  run_ci_pytests.py
ci/settings/: _test_overrides.py  my_settings.py  s3.py  settings.py  user_defined_settings.py
ci/tests/: _dummy_job_script.py  conftest.py  test_ai_sessions.py  test_autoscaling_group.py  test_bootstrap_venv_manager.py  test_check_output_instance_id.py  test_check_run_adopt.py  test_check_runs.py  test_controller_job_heartbeat.py  test_controller_message_handling.py  test_destroy_runtime.py  test_environment_prefix.py  test_finish_workflow_always_runs.py  test_gh_auth_lambda.py  test_gh_repo_name.py  test_gh_review_threads.py  test_imagebuilder_launch_templates.py  test_infra_projects.py  test_init.py  test_job_filtering.py  test_lambda_gh_trigger.py  test_lambda_packaging.py  test_orchestrator_ai.py  test_orchestrator_ci_failures.py  test_packaging.py  test_parser.py  test_pool_autoscaler.py  test_publish_coverage_pages.py  test_result.py  test_run_ci_pytests.py  test_runner.py  test_runner_idle_scale_in.py  test_runs_on_routing.py  test_runtime.py  test_secret.py  test_settings.py  test_usage.py  (+7 more)
coverage/: class_index.html  function_index.html  index.html  status.json  z_07c03e7a4c866698___init___py.html  z_07c03e7a4c866698__utils_py.html  z_07c03e7a4c866698_autoscaling_group_py.html  z_07c03e7a4c866698_cloud_py.html  z_07c03e7a4c866698_dedicated_host_py.html  z_07c03e7a4c866698_ec2_instance_py.html  z_07c03e7a4c866698_iam_instance_profile_py.html  z_07c03e7a4c866698_iam_role_py.html  z_07c03e7a4c866698_image_builder_py.html  z_07c03e7a4c866698_lambda_function_py.html  z_07c03e7a4c866698_launch_template_py.html  z_07c03e7a4c866698_report_page_py.html  z_07c03e7a4c866698_secret_parameter_py.html  z_07c03e7a4c866698_sqs_queue_py.html  z_07c03e7a4c866698_storage_py.html  z_07c03e7a4c866698_vpc_py.html  z_41b380eec6705912___init___py.html  z_41b380eec6705912___main___py.html  z_41b380eec6705912__environment_py.html  z_41b380eec6705912_artifact_py.html  z_41b380eec6705912_cache_py.html  z_41b380eec6705912_cidb_py.html  z_41b380eec6705912_digest_py.html  z_41b380eec6705912_docker_py.html  z_41b380eec6705912_environment_py.html  z_41b380eec6705912_event_py.html  z_41b380eec6705912_generate_favicon_py.html  z_41b380eec6705912_gh_auth_deprecated_py.html  z_41b380eec6705912_gh_auth_py.html  z_41b380eec6705912_gh_py.html  z_41b380eec6705912_hook_cache_py.html  z_41b380eec6705912_hook_html_py.html  z_41b380eec6705912_hook_interface_py.html  z_41b380eec6705912_html_prepare_py.html  z_41b380eec6705912_info_py.html  z_41b380eec6705912_interactive_py.html  (+44 more)
praktika/: __init__.py  __main__.py  _environment.py  _settings.py  artifact.py  auto_hooks.py  aux_job.py  cache.py  cidb.py  defaultsettings.py  digest.py  docker.py  downstream-reports.md  environment.py  generate_favicon.py  gh.py  gh_auth.py  hook_cache.py  hook_html.py  html_generator.py  html_page_development.md  info.py  interactive.py  job.py  json.html  mangle.py  native_jobs.py  parser.py  praktika.html  project_init.py  result.py  runner.py  runtime.py  s3.py  secret.py  settings.py  usage.py  utils.py  validator.py  version.py  (+2 more)
praktika.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
praktika_bootstrap/: __init__.py  common.py  run_job.py  run_workflow.py  venv_manager.py
recurcipy/: __init__.py  __main__.py  artifact.py  aux_job.py  cache.py  defaultsettings.py  environment.py  job.py  machine_init.py  mangle.py  parser.py  runner.py  runtime.py  s3.py  settings.py  utils.py  validator.py  workflow.py  yaml_generator.py  yaml_templates.py
terraform/: example_fixed_size_asg.tf  example_self_scaling_asg.tf  fixed_size_user_data.txt  lambdas.tf  main.tf  user_data.tf  user_data.txt  variables.tf
(+193 files in other folders)
