[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praktika"
version = "0.1.7"
description = "CI Infrastructure Toolbox"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Max Kainov", email = "max.kainov@clickhouse.com"}
]
keywords = ["ci", "cd", "continuous-integration", "automation", "github-actions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
aws = [
    "boto3>=1.18.0",
]
s3 = [
    "boto3>=1.18.0",
]
github = [
    "requests>=2.25.0",
]
github-auth = [
    "PyJWT>=2.4.0",
    "cryptography>=42.0.0",
    "requests>=2.25.0",
]
infrastructure = [
    "boto3>=1.18.0",
    "PyJWT>=2.4.0",
    "cryptography>=42.0.0",
    "requests>=2.25.0",
]
# AI orchestration with the built-in "anthropic" provider (first-party API).
# Optional: the SDK is imported lazily, so the advisor degrades to an error Turn
# if it's absent.
ai = [
    "anthropic>=0.69.0",
]
# AI orchestration via the "bedrock" provider (Amazon Bedrock, AWS auth). Adds
# the SDK's Bedrock client deps (boto3) on top of `ai`.
bedrock = [
    "anthropic[bedrock]>=0.69.0",
]
all = [
    "boto3>=1.18.0",
    "PyJWT>=2.4.0",
    "cryptography>=42.0.0",
    "requests>=2.25.0",
    "anthropic[bedrock]>=0.69.0",
]
dev = [
    "coverage>=7.0.0,<8",
    "pytest>=7.0.0",
    "pytest-reportlog>=0.4.0",
    "boto3>=1.18.0",
    "PyJWT>=2.4.0",
    "cryptography>=42.0.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/ClickHouse/praktika"
Repository = "https://github.com/ClickHouse/praktika"
Issues = "https://github.com/ClickHouse/praktika/issues"

[project.scripts]
praktika = "praktika.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["praktika", "praktika.*"]
exclude = ["tests*", "*.tests", "*.tests.*"]

[tool.setuptools.package-data]
praktika = [
    "*.html",
    "py.typed",
    "infrastructure/native/user_data_cidb.sh",
    "infrastructure/native/cidb_schema.sql",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["ci/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
branch = true
source = ["praktika"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pylint.BASIC]
max-module-lines = 2000
max-line-length = 120

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "bare-except",
    "broad-except",
    "cell-var-from-loop",
    "fixme",
    "invalid-name",
    "missing-docstring",
    "redefined-outer-name",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-public-methods",
    "wildcard-import",
]

[tool.pylint.SIMILARITIES]
min-similarity-lines = 1000
