[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praktika-controller"
version = "0.1.1"
description = "Thin controller for launching versioned Praktika workloads"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.18.0",
    "PyJWT>=2.4.0",
    "cryptography>=42.0.0",
    "requests>=2.25.0",
]

[project.scripts]
praktika-controller = "praktika_controller.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["praktika_controller*"]
